--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,12 +16,14 @@
 .page>main>header {
   background-color: black;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   padding: 20px;
   width: 100%;
   border-bottom: 1px solid #e3bb42ff;
+  text-align: center;
+  gap: 5px;
 }
 
 .page>main>header>img {
@@ -31,8 +33,9 @@
 
 .page>main>header>nav {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   margin-top: 10px;
+  gap: 5px;
 }
 
 .page>main>header>nav>a {
@@ -59,7 +62,7 @@ section.banner {
   color: #e3bb42ff;
   justify-content: center;
   align-items: center;
-  position: relative;
+  /* position: relative; */
 }
 
 section.banner > h1 {
@@ -84,56 +87,79 @@ section.banner > button:hover {
 /* Fim css banner */
 
 /* css contato */
-/* section.end_contato {
-  border: 2px dashed red;
+section.end_contato {
   background-color: white;
   display: flex;
-  max-width: 1024px;
-  margin: auto;
-  justify-content: space-evenly;
-  flex-flow: row wrap;
+  /* max-width: 1024px; */
+  width: 100%;
+  /* margin: auto; */
+  justify-content: center;
+  gap: 10px;
+  flex-flow: column wrap;
   padding: 10px;
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
 
-  transform: translate(-50%, 30%);
-} */
-
-/* section.end_contato > div {
-  width: 200px;
-  text-align: center;
-  border: 2px dashed red;
-} */
-
-section.end_contato {
-  max-width: 1024px;
-  border: 2px dashed red;
-  margin: auto;
+  transform: translate(-50%, 40%); */
 }
 
-.container_endereco {
+section.end_contato > div {
   display: flex;
-  border: 2px dashed red;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
 }
 
 .icon {
   width: 35px;
   height: 35px;
+  margin: auto;
 }
 
-section.end_contato > div > h2 {
-  margin-bottom: 10px;
+.end_contato > div > h2 {
+  width: 200px;
+  margin: 0px auto 10px;
 }
 
 div.linha {
   border-bottom: 10px solid #e3bb42ff;
-  width: 40%;
+  width: 20%;
   text-align: center;
-  margin: auto;
-  margin-bottom: 10px;
+  margin: 0px auto 10px;
 }
 
 section.end_contato > div > p {
   text-align: center;
+  width: 200px;
+  margin: 0px auto 10px;
+}
+/* Fim css contato */
+
+section.qualificacao {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 20px;
+  overflow: hidden;
+  flex-flow: column nowrap;
+  border: 2px dashed red;
+}
+
+section.qualificacao > article > h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+section.qualificacao > article > p {
+  text-align: justify;
+  margin-bottom: 10px;
+}
+
+section.qualificacao > aside {
+  border: 2px dashed red;
+  padding: 5px;
+  overflow: hidden;
+  
 }
