--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -72,7 +72,7 @@ section.banner > h1 {
 }
 
 section.banner > button {
-  padding: 20px;
+  padding: 10px;
   border-radius: 5px;
   background-color: #e3bb42ff;
   color: white;
@@ -253,15 +253,19 @@ section.pacotes {
 }
 
 section.pacotes > button {
-  padding: 20px;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   background-color: #e3bb42ff;
   color: white;
   font-size: .8em;
   cursor: pointer;
-  width: 200px;
   margin: auto;
+}
+
+section.pacotes > button:hover {
+  background-color: white;
+  color: #e3bb42ff;
 }
 
 section.pacotes > h2 {
@@ -322,15 +326,19 @@ section.equipe {
 }
 
 section.equipe > button {
-  padding: 20px;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   background-color: #e3bb42ff;
   color: white;
   font-size: .8em;
   cursor: pointer;
-  width: 200px;
   margin: auto;
+}
+
+section.equipe > button:hover {
+  background-color: white;
+  color: #e3bb42ff;
 }
 
 section.equipe > h2 {
@@ -372,6 +380,7 @@ section.equipe > div.servicos > div.img_texto > div.texto > p {
 }
 /* Fim do css equipe */
 
+/* Início do css espaço */
 section.espaco {
   display: flex;
   flex-direction: column;
@@ -429,4 +438,224 @@ section.espaco > div.servicos > div.img_texto > div.texto > h3 {
 section.espaco > div.servicos > div.img_texto > div.texto > p {
   margin-bottom: 10px;
 }
+/* Fim do css espaço */
 
+/* Início do css depoimento */
+section.aparencia_depoimento {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+section.aparencia_depoimento > div.banner {
+  background-image: url('../../public/banner10.png');
+  background-size: cover;
+  width: 100%;
+  height: 150px;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+section.aparencia_depoimento > div.banner > h1 {
+  color: #e3bb42ff;
+  text-align: center;
+  text-shadow: 2px 2px 2px black;
+  width: 80%;
+}
+
+section.aparencia_depoimento > div.banner > button {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #e3bb42ff;
+  color: white;
+  font-size: .8em;
+  cursor: pointer;
+  margin: auto;
+}
+
+section.aparencia_depoimento > div.banner > button:hover {
+  background-color: white;
+  color: #e3bb42ff;
+}
+
+section.aparencia_depoimento > div.depoimentos {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+section.aparencia_depoimento > div.depoimentos > h2 {
+  text-align: center;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+section.aparencia_depoimento > div.depoimentos > p {
+  text-align: center;
+  padding: 10px;
+}
+
+section.aparencia_depoimento > div.falas {
+  display: flex;
+  overflow-x: auto;
+}
+
+section.aparencia_depoimento > div.falas::-webkit-scrollbar {
+  width: 5px; /* Largura da barra de rolagem */
+  height: 5px; /* Altura da barra de rolagem */
+}
+
+section.aparencia_depoimento > div.falas::-webkit-scrollbar-thumb {
+  background-color: #e3bb42ff; /* Cor da barra */
+  border-radius: 5px; /* Bordas arredondadas */
+}
+
+section.aparencia_depoimento > div.falas::-webkit-scrollbar-track {
+  background-color: lightgray; /* Cor do fundo da barra */
+}
+
+section.aparencia_depoimento > div.falas > div {
+  display: flex;
+  flex-flow: column nowrap;
+  flex: 1 0 200px;
+  align-items: center;
+  gap: 5px;
+  margin-left: 5px;
+  text-align: center;
+  padding: 5px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.279);
+}
+
+section.aparencia_depoimento > div.falas > div > img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+section.aparencia_depoimento > div.falas > div > div.icons {
+  color: yellow;
+}
+/* Fim do css depoimento */
+
+/* Início css agendamento */
+section.agendamento {
+  background-image: url("../../public/banner5.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-flow: column wrap;
+  height: 200px;
+  margin-bottom: 10px;
+  justify-content: center;
+}
+
+section.agendamento > div {
+  background-color: rgba(255, 255, 255, 0.505);
+  width: 80%;
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+section.agendamento > div > h1 {
+  text-align: center;
+  color: #e3bb42ff;
+  text-shadow: 2px 2px 2px black;
+  margin-bottom: 10px;
+}
+
+section.agendamento > div > p {
+  text-align: center;
+  text-shadow: 2px 2px 2xp #e3bb42ff;
+  margin-bottom: 10px;
+}
+
+section.agendamento > div > div.contato {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div.contato > .icons {
+  background-color: white;
+  border-radius: 50%;
+  padding: 5px;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+div.contato > small {
+  text-align: center;
+}
+/* Fim do css agendamento */
+
+/* Início css localização */
+section.localizacao {
+  height: 200px;
+  overflow: hidden;
+}
+/* Fim css localização */
+
+/* Início css footer */
+footer.footer {
+  background-color: black;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  padding: 10px;
+}
+
+footer.footer > img {
+  width: 100px;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+footer.footer > nav {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 5px;
+  align-items: center;
+}
+
+footer.footer > nav > a {
+  text-decoration: none;
+  color: white;
+}
+
+footer.footer > div.autor {
+  color: white;
+  font-size: .8em;
+}
+/* Fim css footer */
+
+/* Início css botão whatsapp */
+.whatsappButton {
+  position: fixed;
+  bottom: 20px; 
+  right: 20px; 
+  background-color: #25d366; 
+  border-radius: 50%;
+  padding: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s;
+}
+
+.whatsappButton:hover {
+  background-color: #128c7e; 
+}
+
+.whatsappIcon {
+  color: white;
+  font-size: 1rem; 
+}
+/* Fim do botão whatsapp */
